--- a/about.html
+++ b/about.html
@@ -38,12 +38,12 @@
           <div class="row"> 
             <div class="col-3 ps-5"> 
                 <li class="nav-item ps-5">
-                    <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
+                    <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png" alt=""></a>
                 </li>
             </div>
              <div class="col-3 ps-5"> 
                <li class="nav-item ps-5">
-                  <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
+                  <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png" alt=""></a>
                </li>
              </div>
             <div class="col-3 ps-5"> 
@@ -116,13 +116,13 @@
               <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
               <div class="row"> 
                 <div class="col-1">
-                  <i class="bi bi-facebook"></i>
+                    <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank"><i class="bi bi-facebook text-light"></i></a>
                 </div>
                 <div class="col-1">
-                  <i class="bi bi-youtube"></i>
+                    <a href="https://www.youtube.com/channel/UCxqTQfOzRZLO7gNJQSgTGIw" target="_blank"><i class="bi bi-youtube text-light"></i></a>
                 </div>
                 <div class="col-1">
-                  <i class="bi bi-instagram"></i>
+                    <a href="https://www.instagram.com/aruna_couples_clinic_kakinada/?fbclid=IwAR0jpbJJbL8qf2YJtEdLQ_rXBQ0L1kM9esyIAH5HhG_N-GDL1rxlGPgKryY" target="_blank"><i class="bi bi-instagram text-light"></i></a>
                 </div>
               </div>
           </div>
