--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
 <section class="ourstory mb-5"> 
   <div class="card" style="width: 60rem;">
     <div class="card-body">
-       <div class="container">
+       <div class="container-lg container-sm container-md">
         <div class="row">
           <div class="col-6 mt-5 pt-5 ps-5">
              <img src="assets/img/about.png" alt="" height="200" width="300">
@@ -132,13 +132,13 @@
               <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
               <div class="row"> 
                 <div class="col-1">
-                  <i class="bi bi-facebook"></i>
+                    <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank"><i class="bi bi-facebook text-light"></i></a>
                 </div>
                 <div class="col-1">
-                  <i class="bi bi-youtube"></i>
+                    <a href="https://www.youtube.com/channel/UCxqTQfOzRZLO7gNJQSgTGIw" target="_blank"><i class="bi bi-youtube text-light"></i></a>
                 </div>
                 <div class="col-1">
-                  <i class="bi bi-instagram"></i>
+                    <a href="https://www.instagram.com/aruna_couples_clinic_kakinada/?fbclid=IwAR0jpbJJbL8qf2YJtEdLQ_rXBQ0L1kM9esyIAH5HhG_N-GDL1rxlGPgKryY" target="_blank"><i class="bi bi-instagram text-light"></i></a>
                 </div>
               </div>
           </div>
