--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse   navbar-collapse justify-content-center ml-auto"" id="navbarNav">
+        <div class="collapse   navbar-collapse justify-content-center ml-auto" id="navbarNav">
             <ul class="navbar-nav">
             <div class="row"> 
               <!-- <div class="col-3 ps-5"> 
@@ -47,14 +47,14 @@
               </div> -->
                <div class="col-3 ps-5 me-5"> 
                  <li class="nav-item ps-5 me-5">
-                    <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
+                    <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png" alt=""></a>
                  </li>
                </div>
               <div class="col-3 ms-5"> 
                   <li class="nav-item mt-3  navbarphonenumber">
                     <div class="row"> 
                         <div class="col-3 ps-2"> 
-                          <a class="nav-link" href="#"><img src="assets/img/phone.svg" alt=""> </a>
+                          <a class="nav-link" href="index.html"><img src="assets/img/phone.svg" alt=""> </a>
                         </div>
                         <div class="col-9 mt-2">
                           <h5>+79979901881</h5>
@@ -457,13 +457,13 @@
                 <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
                 <div class="row"> 
                   <div class="col-1">
-                    <i class="bi bi-facebook"></i>
+                      <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank"><i class="bi bi-facebook text-light"></i></a>
                   </div>
                   <div class="col-1">
-                    <i class="bi bi-youtube"></i>
+                      <a href="https://www.youtube.com/channel/UCxqTQfOzRZLO7gNJQSgTGIw" target="_blank"><i class="bi bi-youtube text-light"></i></a>
                   </div>
                   <div class="col-1">
-                    <i class="bi bi-instagram"></i>
+                      <a href="https://www.instagram.com/aruna_couples_clinic_kakinada/?fbclid=IwAR0jpbJJbL8qf2YJtEdLQ_rXBQ0L1kM9esyIAH5HhG_N-GDL1rxlGPgKryY" target="_blank"><i class="bi bi-instagram text-light"></i></a>
                   </div>
                 </div>
             </div>
