--- a/contact.html
+++ b/contact.html
@@ -91,10 +91,10 @@
     <div class="card-body">
        <div class="container-lg container-sm container-md">
         <div class="row">
-          <div class="col-6 mt-5 pt-5 ps-5">
+          <div class="col-lg-6  col-md-12 col-sm-12 mt-5 pt-5 ps-5">
              <img src="assets/img/about.png" alt="" height="200" width="300">
           </div>
-          <div class="col-6">
+          <div class="col-lg-6  col-md-12 col-sm-12">
             <h1 class="mt-5">Get In touch</h1>
             <br>
             <form id="appoinmentfrom">
