--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Bootstrap JS dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+
+
 </head>
 <body>
 
@@ -170,10 +178,10 @@
       <h1 class="text-center">Our services</h1>
       <h6 class="text-center mb-5">We provide specialized cosmetic gynecology services.</h6>
 
-    <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
+    <div id="carouselExampleControls" class="carousel carousel-dark slide col-lg-12 col-sm-12 col-md-12" data-bs-ride="carousel">
       <div class="carousel-inner">
-          <div class="carousel-item active">
-              <div class="card-wrapper container-sm d-flex  justify-content-around">
+          <div class="carousel-item active  col-lg-12 col-sm-12 col-md-12">
+              <div class="card-wrapper container-sm d-flex   justify-content-around">
                   <!--  FIRST CARD -->
                   <div class="card" style="width: 18rem;">
                       <div class="card-body ourservicesfirstcard">
@@ -205,7 +213,7 @@
                 </div>
               </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item  col-lg-12 col-sm-12 col-md-12">
               <div class="card-wrapper container-sm d-flex   justify-content-around">
                   <!--  FOURTH  CARD -->
                     <div class="card" style="width: 18rem;">
@@ -236,7 +244,7 @@
                 </div>
               </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item  col-lg-12 col-sm-12 col-md-12">
               <div class="card-wrapper container-sm d-flex  justify-content-around">
                     <!--  FOURTH  CARD --> 
                     <div class="card" style="width: 18rem;">
@@ -346,8 +354,112 @@
         <div class="container">
             <div class="row">
                <div class="col-lg-6 col-sm-12 col-md-12">
-                  
-               </div>
+                <!--  BOOTSTRAP ACCORDION -->
+                <div class="accordion" id="accordionPanelsStayOpenExample">
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                         FEMALE (NON SURGICAL)
+                      </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                      <div class="accordion-body">
+                        <!-- <strong>This is the first item's accordion body.</strong> -->
+                        <li>Vaginal Rejuvenation</li>
+                        <li>Urinary Incontinence</li>
+                        <li>Vaginal Dryness & Infection</li>
+                        <li>Vaginal Disccharge</li>
+                        <li>Post Delivery Rehabilitation</li>
+                        <li>G-Shot</li>
+                        <li>O-Shot</li>
+                        <!-- <code>.accordion-body</code> -->
+                        <a href="#" class="btn btn-primary">Click Here</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                        FEMALE (SURGICAL)
+                      </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+                      <div class="accordion-body">
+                       <!-- <strong>This is the first item's accordion body.</strong> -->
+                       <li>Hymenoplasty</li>
+                       <li>Labiominoraplasty</li>
+                       <li>Labiomajoraplasty</li>
+                       <li>Clitoral hood reduction</li>
+                       <li>Clitoral unhooding</li>
+                       <li>Monsplasty</li>
+                       <!-- <code>.accordion-body</code> -->
+                       <a href="#" class="btn btn-primary">Click Here</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                         MALE 
+                      </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                      <div class="accordion-body">
+                        <!-- <strong>This is the first item's accordion body.</strong> -->
+                       <li>Hymenoplasty</li>
+                       <li>Labiominoraplasty</li>
+                       <li>Labiomajoraplasty</li>
+                       <li>Clitoral hood reduction</li>
+                       <li>Clitoral unhooding</li>
+                       <li>Monsplasty</li>
+                       <!-- <code>.accordion-body</code> -->
+                       <a href="#" class="btn btn-primary">Click Here</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                        FEMALE (SURGICAL)
+                      </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+                      <div class="accordion-body">
+                       <!-- <strong>This is the first item's accordion body.</strong> -->
+                       <li>Hymenoplasty</li>
+                       <li>Labiominoraplasty</li>
+                       <li>Labiomajoraplasty</li>
+                       <li>Clitoral hood reduction</li>
+                       <li>Clitoral unhooding</li>
+                       <li>Monsplasty</li>
+                       <!-- <code>.accordion-body</code> -->
+                       <a href="#" class="btn btn-primary">Click Here</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                         Erectile Dysfunction Procedure
+                      </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                      <div class="accordion-body">
+                        <!-- <strong>This is the first item's accordion body.</strong> -->
+                       <li>Urine Incontinence</li>
+                       <li>Premature Ejaculation</li>
+                       <li>Erectile Dysfunction</li>
+                       <li>Focused Extracorporeal Shock wave Therapy</li>
+                       <li>HIFEM Chair ( Emsella Chair)</li>
+                       <li>P-Shot</li>
+                       <!-- <code>.accordion-body</code> -->
+                       <a href="#" class="btn btn-primary">Click Here</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--  ENDING BOOTSTRAP  ACCORDION -->
                <div class="col-lg-6 col-sm-12 col-md-12">
                       <h1>Vaginal Rejuvenation</h1>
                       <h6>Boost Your confidence and well-being.</h6>
@@ -362,7 +474,7 @@
                       <br>
                     <a href="#" class="btn btn-primary">learn more</a>
                </div>
-            </div>
+             
         </div>
     </div>
   </section>
