--- a/femalenonsurgical.html
+++ b/femalenonsurgical.html
@@ -86,7 +86,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav ml-auto justify-content-between">
+    <div class="ps-2 ml-auto justify-content-between">
       <a class="nav-item nav-link" href="male.html" id="navlink2">
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <img src="assets/img/menscilinicfinallogo.png" alt="">
