--- a/index.html
+++ b/index.html
@@ -108,10 +108,11 @@
 <!-- Header Large Screen only  -->
 
 <header id="main_img"> 
-<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow fixed-top p-0">
   <a class="navbar-brand ms-5" href="index.html">
     <img src="assets/img/logo.png" alt="">
   </a>
+  <span class="slant-shadow">.</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -121,6 +122,7 @@
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <img src="assets/img/menscilinicfinallogo.png" alt="">
       </a>
+      <span class="slant-shadow">.</span>
       <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
         <div class="d-flex align-items-center">
           <img src="assets/img/phone.svg" alt="">
@@ -144,6 +146,7 @@
   <a class="navbar-brand me-5" href="index.html">
     <img src="assets/img/logo.png" alt="">
   </a>
+  <span></span>
   <button class="navbar-toggler ms-5" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
